# InferSight

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_stabilization_indexes_seed.py
apps/api/app/: config.py  main.py
apps/api/app/db/: models.py  seed.py  session.py
apps/api/app/llm/: base.py  cost.py  errors.py  gateway.py
apps/api/app/llm/providers/: gemini_provider.py  mock_provider.py  openai_provider.py
apps/api/app/observability/: logger.py  metadata.py  redaction.py  spans.py  trace.py
apps/api/app/routes/: comparisons.py  conversations.py  dashboard.py  ingest.py  logs.py  providers.py  traces.py
apps/api/app/schemas/: comparisons.py  conversations.py  dashboard.py  ingest.py  logs.py  providers.py  traces.py
apps/api/app/services/: chat_service.py  comparison_service.py  conversation_service.py  dashboard_service.py  ingestion_service.py  provider_catalog.py  replay_service.py  trace_service.py
apps/api/app/tests/: test_app_smoke.py  test_gateway.py  test_mock_provider.py  test_redaction.py
apps/api/app/workers/: dead_letter.py  ingestion_worker.py
apps/web/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/lib/: api.ts  formatters.ts  providers.ts  stream.ts  types.ts
docs/: api.md  architecture.md  failure-handling.md  ingestion.md  replay.md  schema.md  streaming.md  tradeoffs.md
(+18 files in other folders)
