[project]
name = "infersight-api"
version = "0.1.0"
description = "FastAPI backend for InferSight"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pytest>=8.3.2",
  "python-dotenv>=1.0.1",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
line-length = 100
